[4.3] - Adding navigation placeholders and fixing alignment of card content

--- a/src/components/cardSelect/style/card.scss
+++ b/src/components/cardSelect/style/card.scss
@@ -33,15 +33,15 @@
 }
 
 .custom-container-fees {
-  padding: 0 !important;
-  border: 2px solid $charcoal;
-  margin: 0 2rem 1rem 2rem;
+  padding: 0 0 0 0.5rem !important;
+  // border-bottom: 2px solid $charcoal;
+  margin: 0 2.5rem 0.75rem 2rem;
 }
 
-.static-fee-column {
-  border-right: 2px solid $charcoal;
-  padding: 0 0 0 0.5rem !important;
-}
+// .static-fee-column {
+//   // border-right: 2px solid $charcoal;
+//   padding: 0.5rem !important;
+// }
 
 .icon-style {
   color: $primary-color;
